--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 .idea
+
+# Dependency and build
+harmony/splash_screen/oh_modules/
+package-lock.json
+oh-package-lock.json5
